2000-05-25  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtptls.c:
	    Proper network timeout monitored non-blocking wrapper
	    for SSL_connect()  code.

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Reworked diagnostics codes a bit to collect only relevant
	    SMTP transaction bits per each recipient.
	    (Although still not *quite* correct for problems diagnosed
	     at DATA/dot time, which need all recipients, not just the
	     last one...)

2000-05-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdb.in:
	    Rewritten into PERL(v5) script.

	* smtpserver/rfc821scn.c, smtpserver/smtpcmds.c:
	    Eugene Crosser wanted to have:  <foo!_bar@some.dom>,
	    our scanner demanded an alphanum starter character for
	    the sub-fields of the local-part.  Now allowing also
	    the underscore as starter there -- for a username..
	    (smtpcmds.c has some diagnostics report beauty warts.)

2000-05-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdb.in, router/libdb/ndbm.c, router/libdb/dbm.c:
	    At NewDBM (ndbm) the dbm_dirfno() does not always yield
	    success at the dbm_open().  It *may* yield some scrap data
	    for a while -- especially if the db is *very* small.
	    The  dbm_pagfno()  yields always ok filehandle number,
	    and thus we use it -- and change file moving order to
	    .DIR .PAG to match which is tested latter.

2000-05-10  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/Makefile.in, proto/post-install.sh.in:
	    Moved POSTOFFICE directory subdir generation into
	    the  post-install.sh  script.  Execution of that
	    script before system becomes ready for running is
	    now MANDATORY!  (At least at fresh installations.)

2000-05-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c:
	    Existence of ZENV variable ``SCHEDULERDIRHASH'' drives
	    movement of files from router to the scheduler to go
	    straight to hashed subdirs at the scheduler.

	* router/daemonsub.c: